--- a/BulkyWeb/Views/Catagory/index.cshtml
+++ b/BulkyWeb/Views/Catagory/index.cshtml
@@ -1,1 +1,62 @@
-﻿<h1 class="bg-slate-50"></h1>
+﻿@model List<Category>
+
+<div class="m-5 flex flex-col items-center">
+    <div class="m-3 w-72 p-3 bg-gradient-to-r from-blue-500 to-slate-950 shadow-lg rounded-lg">
+        <h1 class="text-center text-4xl font-extrabold text-white drop-shadow-lg tracking-wider">
+            Category List
+        </h1>
+    </div>
+    <div class="m-1.5 overflow-x-auto flex flex-col items-center">
+        <div class="p-1.5 min-w-full inline-block align-middle">
+            <div class="text-right m-5">
+                <a asp-controller="Catagory" asp-action="Create"
+                   class="bg-blue-600 px-2 py-1 text-white text-xl rounded-md shadow-md border shadow-gray-400 border-gray-400 hover:bg-blue-900">
+                    Create
+                    New
+                    Catagory
+                </a>
+            </div>
+            <div class="border rounded-lg shadow overflow-hidden border-gray-500 shadow-gray-500">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-blue-800">
+                        <tr>
+                            <th scope="col" class="px-6 py-3 text-start text-2xl text-white">
+                                Name
+                            </th>
+                            <th scope="col" class="px-6 py-3 text-center text-white text-2xl">
+                                <span style="display: block;">Display</span>
+                                <span style="display: block;">Order</span>
+                            </th>
+                            <th scope="col" colspan="2" class="px-6 py-3 text-center text-white text-2xl">
+                                Action
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td class="text-start px-6 py-4 whitespace-nowrap text-3xl text-gray-950">
+                                    @item.Name
+                                </td>
+                                <td class="text-center px-6 py-4 whitespace-nowrap text-3xl text-gray-950">
+                                    @item.DisplayOrder
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-end">
+                                    <button type="button" class="inline-flex items-center gap-x-2 text-3xl font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-none focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none hover:underline">
+                                        Edit
+                                    </button>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-end text-3xl">
+                                    <button type="button" class="inline-flex items-center gap-x-2 font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-none focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none hover:underline">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
