--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -1,53 +1,73 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - BulkyWeb</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BulkyWeb.styles.css" asp-append-version="true" />
-    <link href="~/css/tailwind.css" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="~/css/tailwind.css" />
+    <link
+      rel="stylesheet"
+      href="~/BulkyWeb.styles.css"
+      asp-append-version="true"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body class="bg-gray-100">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BulkyWeb</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catagory" asp-action="Index">Catagory</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="border-b border-gray-200 bg-slate-950 p-2">
+        <div class="container flex flex-col">
+          <ul class="container m-2 flex space-x-5">
+            <li>
+              <a
+                class="text-center text-lg font-semibold text-gray-300"
+                asp-area=""
+                asp-controller="Home"
+                asp-action="Index"
+                >Kitab Ke Nashe!</a>
+            </li>
+            <li>
+              <a
+                class="rounded p-1 text-white hover:bg-blue-800"
+                asp-area=""
+                asp-controller="Home"
+                asp-action="Index"
+                >Home</a>
+              
+            </li>
+            <li>
+              <a
+                class="rounded p-1 text-white hover:bg-blue-800"
+                asp-area=""
+                asp-controller="Catagory"
+                asp-action="Index"
+                >Category</a>
+              
+            </li>
+            <li>
+              <a
+                class="rounded p-1 text-white hover:bg-blue-800"
+                asp-area=""
+                asp-controller="Home"
+                asp-action="Privacy"
+                >Privacy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+    <div class="container mx-auto px-4">
+      <main role="main" class="pb-3">@RenderBody()</main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - BulkyWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer class="border-t border-gray-200 bg-white py-4 text-gray-600">
+      <div class="container mx-auto text-center">&copy; 2024 - BulkyWeb</div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-</body>
+  </body>
 </html>
