--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/css/tailwind.css" />
     <link
       rel="stylesheet"
-      href="~/BulkyWeb.styles.css"
+      href="~/css/site.css"
       asp-append-version="true"
     />
     <link
@@ -42,7 +42,7 @@
               <a
                 class="rounded p-1 text-white hover:bg-blue-800"
                 asp-area=""
-                asp-controller="Catagory"
+                asp-controller="Category"
                 asp-action="Index"
                 >Category</a>
               
