--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -24,14 +24,14 @@
                            asp-action="Index">Kitab Ke Nashe!</a>
                     </li>
                     <li>
-                        <a class="rounded p-1 text-white hover:bg-blue-800"
+                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
                            asp-area=""
                            asp-controller="Home"
                            asp-action="Index">Home</a>
 
                     </li>
                     <li>
-                        <a class="rounded p-1 text-white hover:bg-blue-800"
+                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
                            asp-area=""
                            asp-controller="Category"
                            asp-action="Index">Category</a>
@@ -39,14 +39,14 @@
                     </li>
 
                     <li>
-                        <a class="rounded p-1 text-white hover:bg-blue-800"
+                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
                            asp-area=""
                            asp-controller="Product"
                            asp-action="Index">Product</a>
 
                     </li>
                     <li>
-                        <a class="rounded p-1 text-white hover:bg-blue-800"
+                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
                            asp-area=""
                            asp-controller="Home"
                            asp-action="Privacy">Privacy</a>
