--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="p-1.5 min-w-full inline-block align-middle">
             <div class="text-right m-5">
                 <a asp-controller="Category" asp-action="Create"
-                   class="bg-blue-600 px-2 py-1 text-white text-xl rounded-md shadow-md border shadow-gray-400 border-blue-600 hover:bg-blue-900">
+                   class="bg-blue-600 px-2 py-1 text-white text-xl rounded-md border  border-blue-600 hover:bg-blue-900">
                     Create
                     New
                     Category
@@ -42,13 +42,13 @@
                                 <td class="text-center px-6 py-4 whitespace-nowrap text-3xl text-gray-950">
                                     @item.DisplayOrder
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-end">
-                                    <a class="inline-flex items-center gap-x-2 text-3xl font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-none focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none hover:underline" asp-action="Edit" asp-route-id="@item.Id">
+                                <td class="px-3 py-4">
+                                    <a class="p-2 inline-flex items-center gap-x-2 text-2xl font-semibold rounded-lg bg-green-600 text-white hover:bg-green-800" asp-action="Edit" asp-route-id="@item.Id">
                                         Edit
                                     </a>
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-end text-3xl">
-                                    <a class="inline-flex items-center gap-x-2 font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-none focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none hover:underline" asp-action="Delete" asp-route-id="@item.Id">
+                                <td class="px-4 py-4">
+                                    <a class="p-2 inline-flex items-center gap-x-2 text-2xl font-semibold rounded-lg bg-red-600 text-white hover:bg-red-800" asp-action="Delete" asp-route-id="@item.Id">
                                         Delete
                                     </a>
                                 </td>
