some required changes

--- a/BulkyWeb/Views/Home/Index.cshtml
+++ b/BulkyWeb/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 
 
             <span class="font-bold">₹ @item.Price</span>
-            <a asp-action="Index" class="bg-blue-600 text-center py-1 px-4 rounded-sm font-semibold text-sm text-white">
+            <a asp-action="Index" class="bg-blue-600 text-center py-1 px-4 rounded-sm font-semibold text-sm text-white hover:bg-blue-800">
                 Buy Now
             </a>
         </div>
