--- a/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post"
-          class="flex flex-col gap-6 bg-blue-800 p-5 items-center rounded-md mt-7 border shadow-md border-gray-400 shadow-gray-400">
+          class="flex flex-col gap-6 bg-blue-800 p-5 rounded-md mt-7 border shadow-md border-gray-400 shadow-gray-400">
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
         <div class="flex flex-col gap-2.5">
@@ -38,13 +38,22 @@
                    autocomplete="new-password" aria-required="true" placeholder="confirm password" />
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
-
-        <div>
-            <button id="registerSubmit" type="submit"
-                    class="bg-white text-center py-1 px-4 rounded-xl font-semibold text-xl text-black">
-                Register
-            </button>
+        <div class="flex flex-col gap-2.5">
+            <label asp-for="Input.Role" class="text-start font-bold text-white text-2xl">Role</label>
+            <select asp-for="Input.Role" class="text-start p-2 text-2xl text-gray-950 rounded-lg"
+                    autocomplete="new-password" aria-required="true" placeholder="password" asp-items="@Model.Input.RoleList">
+                    <option disabled selected>-select Role-</option>
+            </select>
         </div>
+        <div>
+            <div class="flex justify-center items-center">
+                <button id="registerSubmit" type="submit"
+                        class="bg-white text-center py-1 px-4 rounded-xl font-semibold text-xl text-black">
+                    Register
+                </button>
+            </div>
+        </div>
+
     </form>
 </div>
 @section Scripts {
