--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
 <body class="bg-gray-100">
     <header>
         <nav class="border-b border-gray-200 bg-slate-950 p-2">
-            <div class="container flex flex-col">
-                <ul class="container m-2 flex space-x-5 justify-center items-center">
+            <div class="container flex">
+                <ul class="container m-2 flex space-x-5 justify-start items-center">
                     <li>
                         <a class="text-center text-lg font-semibold text-gray-300"
                            asp-area=""
@@ -30,32 +30,33 @@
                            asp-action="Index">Home</a>
 
                     </li>
-                    <li>
-                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
-                           asp-area=""
-                           asp-controller="Category"
-                           asp-action="Index">Category</a>
+                    @if(User.IsInRole(StaticDetails.Role_admin))
+                    {
+                        <li>
+                            <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
+                               asp-area=""
+                               asp-controller="Category"
+                               asp-action="Index">Category</a>
 
-                    </li>
+                        </li>
 
-                    <li>
-                        <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
-                           asp-area=""
-                           asp-controller="Product"
-                           asp-action="Index">Product</a>
+                        <li>
+                            <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
+                               asp-area=""
+                               asp-controller="Product"
+                               asp-action="Index">Product</a>
 
-                    </li>
+                        </li>
+                    }
+                    
                     <li>
                         <a class="rounded p-1 font-bold text-white hover:bg-blue-800"
                            asp-area=""
                            asp-controller="Home"
                            asp-action="Privacy">Privacy</a>
                     </li>
-                    <li>
-                        <partial name="_LoginPartial.cshtml" />
-                    </li>
-                    
                 </ul>
+                <partial name="_LoginPartial.cshtml" />
             </div>
         </nav>
     </header>
